tests/errors/sem.type-mismatch.directive-arg.or
main :: () -> void {
    @icall 5;
};
